--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@
     font-weight: bold;
 }
 
+/* Size for brand */
+nav .navbar-brand
+{
+    font-size: xx-large;
+}
 
 /* Colors for brand */
 nav .navbar-brand .blue
